# e_commerce

./: docker-compose.yml  pyproject.toml
config/: asgi.py  settings.py  urls.py
core/: admin.py
core/migrations/: 0001_initial.py
core/signals/: handlers.py
e_commerce/: settings.py  urls.py
likes/: models.py
likes/migrations/: 0001_initial.py
store/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
store/management/commands/: seed_db.py
store/migrations/: 0001_initial.py  0002_alter_cartitem_quantity.py  0002_rename_price_product_unit_price_product_slug.py  0003_alter_collection_options_alter_customer_options_and_more.py  0003_alter_customer_options_remove_customer_email_and_more.py  0004_alter_order_options.py  0004_alter_orderitem_product_alter_product_collection_and_more.py  0005_alter_customer_options.py  0006_alter_orderitem_order.py  0007_productimage.py
store/signals/: handlers.py
store_custom/: admin.py
tags/: admin.py  models.py
tags/migrations/: 0001_initial.py
