[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "e_commerce"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
black = "^23.3.0"
django-debug-toolbar = "^4.0.0"
psycopg2 = "^2.9.6"
djangorestframework = "^3.14.0"
drf-nested-routers = "^0.93.4"
django-filter = "^23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
